--- a/css/style.css
+++ b/css/style.css
@@ -1502,7 +1502,7 @@
 }
 /*------------------------------------------------------------------ All Pages -------------------------------------------------------------------*/
  .all-title-box{
-     background: url("../images/in/all-bg-title1.jpg") no-repeat center center;
+     background: url("../images/gereja/banbar3.jpg") no-repeat center center;
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -ms-background-size: cover;
