--- a/css/style.css
+++ b/css/style.css
@@ -1169,7 +1169,7 @@
 /*------------------------------------------------------------------ Instagram Feed -------------------------------------------------------------------*/
  .instagram-box{
      padding: 70px 0px;
-     background: url(../images/home/bg-ig.jpg) no-repeat center center;
+     background: url(../images/gereja/banbar3.jpg) no-repeat center center;
      background-size: auto auto;
      -webkit-background-size: cover;
      -moz-background-size: cover;
